--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ header{
     left: 0;
     width: 100%;
     z-index: 1040;
-    background: rgba(255,255,255,0.9);
+    background: rgba(255, 252, 252, 0.9);
     position: fixed;
     top: 0;
     background:transparent;
@@ -107,8 +107,8 @@ header .icon{
     transition: .9s;
 }
 .home_selector:hover{
-    background: #34495e;
-}
+   background: #34495e;
+} 
 
 .title_selector, .btnLeft_selector{
     display: flex;
@@ -120,9 +120,60 @@ header .icon{
     font-size: 3rem;
     color: burlywood;
 }
-.btnLeft_selector i{
+.btnLeft_selector i,
+.btnLeft_selector_stone i{
     font-size: 5rem;
 }
+.stone_seletor{
+   
+    
+    background: rgba(255, 252, 252, 0.9);
+    background:url('../img/whitebarkv1.jpg') no-repeat;
+    background-size: cover;
+    position: relative;
+    background-position: center center;
+    top: -80px;
+    transition: .9s;
+    z-index: 1;
+    height: 200px;
+    padding: 10px;
+    
+}
+.stone_seletor .title_selector_stone_seletor,
+.brick_seletor .title_selector_brick_seletor,
+.stone_accents_seletor .title_selector_stone_accents_seletor{
+   position: absolute;
+   top: 40%;
+   left: 10%;
+   font-size: 2rem;
+   color: white;
+   font-weight: 900;
+   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.brick_seletor{
+    background: url('../img/ironsidev1-bg.jpg') no-repeat;
+    background-size: cover;
+    position: relative;
+    background-position: center center;
+    top: -70px;
+    transition: .9s;
+    z-index: 1;
+    height: 200px;
+    padding: 10px;
+}
+.stone_accents_seletor{
+    background: url('../img/stonaccents-ghosted.jpg') no-repeat;
+    background-size: cover;
+    position: relative;
+    background-position: center center;
+    top: -60px;
+    transition: .9s;
+    z-index: 1;
+    height: 200px;
+    padding: 10px;
+}
+
+
 
 @media (max-width:1048px) {
     label a.logo{
