--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,6 @@
     box-sizing: border-box;
 }
 body{
-    overflow-x: hidden;
-    
     font-family: "Poppins", sans-serif;
 }
 
@@ -78,6 +76,7 @@ header .icon{
     background-color: #34495e;
     background-size: cover;
     height: 140vh;
+    overflow: hidden;
 }
 .text_tile_content{
     position: relative;
@@ -134,54 +133,81 @@ header .icon{
 .btnLeft_selector_stone i{
     font-size: 5rem;
 }
-.stone_seletor{
-   
-    
-    background: rgba(255, 252, 252, 0.9);
-    background:url('../img/whitebarkv1.jpg') no-repeat;
-    background-size: cover;
+
+
+.slideshow-container {
+    max-width: 1000px;
     position: relative;
-    background-position: center center;
-    top: -80px;
-    transition: .9s;
-    z-index: 1;
-    height: 200px;
-    padding: 10px;
-    
-}
-.stone_seletor .title_selector_stone_seletor,
-.brick_seletor .title_selector_brick_seletor,
-.stone_accents_seletor .title_selector_stone_accents_seletor{
-   position: absolute;
-   top: 40%;
-   left: 10%;
-   font-size: 2rem;
-   color: white;
-   font-weight: 900;
-   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-.brick_seletor{
-    background: url('../img/ironsidev1-bg.jpg') no-repeat;
-    background-size: cover;
-    position: relative;
-    background-position: center center;
-    top: -70px;
-    transition: .9s;
-    z-index: 1;
-    height: 200px;
-    padding: 10px;
-}
-.stone_accents_seletor{
-    background: url('../img/stonaccents-ghosted.jpg') no-repeat;
-    background-size: cover;
-    position: relative;
-    background-position: center center;
-    top: -60px;
-    transition: .9s;
-    z-index: 1;
-    height: 200px;
-    padding: 10px;
-}
+    margin: auto;
+  }
+ /* ẩn hình ảnh cho phần tử slideshow */
+  .mySlides {
+    display: none;
+  }
+ /* thiết kế nút mũi tên*/
+  .prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+  }
+ /* thiết kế nút mũi tên next nằm phía bên phải */
+  .next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+  }
+ /* hiệu ứng thay đổi background khi hover vào nút mũi tên*/
+  .prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+  }
+ /* Thiết lập style cho nội dung của mỗi phần tử slideshow */
+  .text {
+    color: #f2f2f2;
+    font-size: 15px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 50%;
+    width: 40%;
+    text-align: center;
+    top: 93%;
+    left: 58%;
+    border: 1px solid;
+    background: #2f3640;
+    height: 6%;
+    border-radius:10px ;
+  }
+ /* Thiết lập style cho số hiển thị của phần tử */
+  .numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+  }
+  .fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
+  }
+ @-webkit-keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+  }
+ @keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+  }
+
+
 
 /**/
 .tabs {
@@ -308,6 +334,15 @@ header .icon{
         width: 500px;
         margin-left: 200px;
     }
+    .text {
+        width: 50%;
+        top: 80%;
+        left: 20%;
+        height: 16%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
 }
 @media (max-width:740px) {
     .text_title{
@@ -337,6 +372,18 @@ header .icon{
         padding: 16px 20px 11px 20px;
         font-size: 20px;
         margin: 0 auto;
+      }
+      .text {
+        font-size: 10px;
+        padding: 8px 12px;
+        width: 71%;
+        top: 80%;
+        left: 20%;
+        border: 1px solid;
+        height: 16%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
       }
 }
 @media (max-width:418px) {
@@ -375,5 +422,17 @@ header .icon{
         padding: 12px 15px 6px 15px;
         font-size: 15px;
         margin: 0 auto;
+      }
+      .text {
+        font-size: 10px;
+        padding: 8px 12px;
+        width: 50%;
+        top: 80%;
+        left: 20%;
+        border: 1px solid;
+        height: 16%;
+        justify-content: center;
+        display: flex;
+        align-items: center;
       }
 }
